# neuralnet.cpp

./: .gitignore  CMakeLists.txt  README.md  build.cmake  csv_png.py  extract_digits.py  save_dataset.py
include/neuralnet.cpp/: layer.hpp  loss.hpp  matrix.hpp  model.hpp  model_io.hpp  nn.hpp  nn_config.hpp  optimizer.hpp
src/: infer.cpp  train.cpp
